<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:contentInsetStart="0dp">

        <TextView
            android:id="@+id/mTxtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.MyApp.Headline6"
            android:textColor="@color/colorAccent" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mIVVoice"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/round_background"
                    android:elevation="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/voice" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center"
                    android:text="@string/voice"
                    android:textAppearance="@style/TextAppearance.MyApp.Body1"
                    android:textColor="@color/txtClr" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/mIVText"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/round_background"
                    android:elevation="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center"
                    android:text="@string/text"
                    android:textAppearance="@style/TextAppearance.MyApp.Body1"
                    android:textColor="@color/txtClr" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mIVCamera"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    
                    android:background="@drawable/round_background"
                    android:elevation="@dimen/_5sdp"
                      android:padding="@dimen/_10sdp"
                    android:src="@drawable/camera" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textAppearance="@style/TextAppearance.MyApp.Body1"
                    android:textColor="@color/txtClr" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mRLPrivacy"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/round_background"
                    android:elevation="@dimen/_5sdp"

                    android:src="@drawable/privacy" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center"
                    android:text="@string/privacy"
                    android:textAppearance="@style/TextAppearance.MyApp.Body1"
                    android:textColor="@color/txtClr" />


            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mRLShare"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/round_background"
                    android:elevation="@dimen/_5sdp"

                    android:src="@drawable/share_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center"
                    android:text="@string/share"
                    android:textAppearance="@style/TextAppearance.MyApp.Body1"
                    android:textColor="@color/txtClr" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/mRLRateUs"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/round_background"
                    android:elevation="@dimen/_5sdp"

                    android:src="@drawable/rateuse" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center"
                    android:text="@string/rate_us"
                    android:textAppearance="@style/TextAppearance.MyApp.Body1"
                    android:textColor="@color/txtClr" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>